fix letter spacing in chat names for no fantasy, closes #238
Former-commit-id: 1e8e44420f5f460e36dbb7a2f1b9c015512a97e0 [formerly eba37f2e4b042ab16d390042168971abec27be9b]
Former-commit-id: e604ee7f823ed7ab87ff29f2e95150c408ea9a8b

--- a/src/client/styles.scss
+++ b/src/client/styles.scss
@@ -54,6 +54,10 @@ body.no-fantasy {
 
   .message-container .message {
     letter-spacing: 0 !important;
+
+    strong {
+      letter-spacing: 0.5px !important;
+    }
   }
 
   .char-card .char-name {
@@ -67,6 +71,7 @@ body.no-fantasy {
     }
   }
 
+  // lobby
   .chat-area {
     .message {
       font-size: 1rem !important;
